# Medical-Rag-chatbot-

./: .gitignore  README.md  fix_persona.py  fix_prompt.py  render.yaml  start.sh
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.jsx
express-server/: index.js  package-lock.json  package.json
express-server/routes/: api.js
server/: main.py  pyproject.toml  requirements.txt  runtime.txt
server/db/: cache.py  session.py  user_profile.py
server/models/: schemas.py  user_schemas.py  xml_parser.py
server/observability/: langsmith.py  logger.py
server/pipeline/: corrective.py  embedder.py  hyde.py  personalization.py  rerank.py  retrieval.py  synthesis.py
server/routes/: query.py  users.py
