[project]
name = "curalink"
version = "1.0.0"
requires-python = ">=3.11,<3.12"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-multipart==0.0.12",

    "groq==0.11.0",
    "langsmith==0.1.147",

    "sentence-transformers==3.0.1",
    "numpy==1.26.4",
    "scikit-learn==1.5.2",

    "motor==3.6.0",
    "pymongo==4.9.2",

    "httpx==0.27.2",
    "aiohttp==3.10.10",
    "python-dotenv==1.0.1",
    "xmltodict==0.13.0",
    "tenacity==9.0.0",
    "slowapi==0.1.9",

    # FIXED Pydantic (CRITICAL)
    "pydantic>=2.7.4,<3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"